[package]
name = "net-entreprise-scraper"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true

[dependencies]
axum = "0.8.4"
rustls = "0.23.31"
scraper = "0.24.0"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "net"] }
ureq = { version = "3.1.0", features = ["rustls"] }
