[package]
name = "net-entreprise-scraper"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.101"
regex = "1.11.2"

[dependencies.web-sys]
version = "0.3.78"
features = [
  "console",
]
