[package]
name = "net-entreprise-scraper"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.7.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.108"
regex = "1.12.3"

[dependencies.web-sys]
version = "0.3.85"
features = [
  "console",
]
